# NGU-Programming-Lab2

./: .gitignore  NGU-Programming-Lab2.sln  README.md
CryptoApp/: CMakeLists.txt  LICENSE.txt  README.md
CryptoApp/cmake/: uninstall.cmake.in
CryptoApp/docs/: BUILD_INSTRUCTIONS.md
CryptoApp/src/: main.cpp
CryptoApp/src/cast128/: cast128.cpp  cast128.h
CryptoApp/src/luc/: luc.cpp  luc.h
CryptoApp/src/rsa/: rsa.cpp  rsa.h
LAB3/: calculate_piecewise.cpp  calculate_piecewise.py  calculate_piecewise_full.cpp  eratospen_primes.cpp  game_winner.cpp  game_winner.py  prime_eratosfen.cpp  series_sum.cpp  series_sum.py  tracc.cpp
LAB4/: README.md
LAB4/task_1/: nonlinear_equation_solver.cpp  nonlinear_equation_solver.go
LAB4/task_2/: ArrayOperations.cpp  ArrayOperations.go  README.md
LAB4/task_3/: linear_congruential_generator.cpp  linear_congruential_generator.go
LAB4/task_4/: ElectionSystem.cpp  ElectionSystem.py  election.go  main.go
LAB4/task_5/: PrisonersDilemma.cpp  prisoners_dilemma.go
LAB5/: README.md
LAB5/zadanie 5.1/: README.md  warehouse_manager.cpp
LAB5/zadanie 5.1/history/: warehouse_manager.cpp  warehouse_manager.go
LAB5/zadanie 5.2/: README.md  clinic_queue.cpp  clinic_queue.go
LAB5/zadanie 5.3/train_schedule_system/: README.md
LAB5/zadanie 5.3/train_schedule_system/src/: commands.cpp
LAB5/zadanie 5.4/social_connections/: README.md
LAB5/zadanie 5.4/social_connections/src/: friend_system.cpp
LAB6/: README.md
LAB6/zadanie 6.1/lab_work/task1/: task1.cpp  task1.go
LAB6/zadanie 6.1/lab_work/task2/: task2.cpp  task2.go
LAB6/zadanie 6.1/lab_work/task3/: task3.cpp  task3.go
LAB6/zadanie 6.2/: README.md
LAB6/zadanie 6.2/aes_cfb_cpp/: CMakeLists.txt
LAB6/zadanie 6.2/aes_cfb_cpp/include/: aes_cfb.h
LAB6/zadanie 6.2/aes_cfb_cpp/src/: aes_cfb.cpp  main.cpp
LAB6/zadanie 6.2/aes_cfb_go/: build.sh  main.go
LAB6/zadanie 6.2/aes_cfb_go/aes_cfb/: aes_cfb.go
LAB6/zadanie_6.1/: README.md
LAB6/zadanie_6.1/lab_work/task3/: task3.go
LAB6/zadanie_6.2/: README.md
LAB6/zadanie_6.2/aes_cfb_cpp/include/: aes_cfb.h
LAB6/zadanie_6.2/aes_cfb_cpp/src/: aes_cfb.cpp
LAB6/zadanie_6.2/aes_cfb_go/aes_cfb/: aes_cfb.go
LAB6/zadanie_6.3/: gauss_method.cpp  gauss_method.go
LAB6/zadanie_6.4/: tile_path_width.cpp  tile_path_width.go
LAB6/zadanie_6.5/chessboard_flips_go/: chessboard_flips.go
LAB6/zadanie_6.5/chessboard_flips_сpp/: chessboard_flips.cpp
ModularInverseCalculator/: ModularInverseCalculator.cpp  README.md
ModularInverseCalculator/modular_inverse/: CMakeLists.txt  readme-notion.md
ModularInverseCalculator/modular_inverse/include/: euclid.h  menu.h  modular_inverse.h  rsa.h
ModularInverseCalculator/modular_inverse/src/: euclid.cpp  fermat.cpp  main.cpp  menu.cpp  modular_inverse.cpp  rsa.cpp
Practice/: rsa_attack_demo.cpp  rsa_encryption.cpp  rsa_encryption.py
Practice/modular_inverse/: CMakeLists.txt
Practice/modular_inverse/include/: continued_fraction.h  rsa_crypto.h  set_encoding.h
Practice/modular_inverse/modular_inverse/: CMakeLists.txt  README.md  readme-notion.md
Practice/modular_inverse/modular_inverse/include/: continued_fraction.h  euclid.h  fermat.h
Practice/modular_inverse/modular_inverse/src/: continued_fraction.cpp  euclid.cpp  fermat_exponentiaon.cpp  menu.cpp
Practice/modular_inverse/src/: continued_fraction.cpp  fermat.cpp  fermat_exponentiaon  main.cpp  menu.cpp  modular_inverse.cpp  rsa.cpp  rsa_crypto.cpp
Practice/zadanie_1/FermatModularExponentiation/include/: prime_check.h
Practice/zadanie_1/FermatModularExponentiation/src/: main.cpp  prime_check.cpp
Practice/zadanie_5/DiophantineSolver/: CMakeLists.txt
Practice/zadanie_5/DiophantineSolver/include/: diophantine.h
Practice/zadanie_full/DiophantineSolver/: README.md
Practice/zadanie_full/DiophantineSolver/include/: fraction.h
Practice/zadanie_full/DiophantineSolver/src/: diophantine.cpp  fraction.cpp  main.cpp
Practice/zadanie_full/FermatModularExponentiation/: CMakeLists.txt  README.md
Practice/zadanie_full/FermatModularExponentiation/include/: fermat_exponentiation.h
Practice/zadanie_full/FermatModularExponentiation/src/: fermat_exponentiation.cpp
Practice/zadanie_full/modular_inverse/: CMakeLists.txt
Practice/zadanie_full/modular_inverse/include/: euclid.h
Practice/zadanie_full/modular_inverse/src/: menu.cpp
digit_ops/: DigitOps.cs  DigitOps.java  DigitOps.kt  README.md  cpp_digit_ops.cpp  digit_ops.asm  digit_ops.go  digit_ops.js  digit_ops.php  digit_ops.py  digit_ops.rb  digit_ops.rs  digit_ops.swift  digit_ops.ts  main.c
digit_ops/digit_ops/: Program.cs
pangram/: Pangram.kt  PangramChecker.cs  PangramChecker.java  README.md  pangram  pangram.asm  pangram.cpp  pangram.go  pangram.js  pangram.php  pangram.py  pangram.rb  pangram.rs  pangram.swift  pangram.ts  pangram_2.asm
pangram/pangram/: Program.cs
pdf_password_locator/: README.md  pdf_password_locator.cpp  pdf_password_locator.py
rsa_crypto_cipher/: Makefile  rsa_crypto.cpp
rsa_crypto_cipher/books/: Война и мир. Книга 1.txt
unvisited_stones/: README.md  UnvisitedStones.cs  UnvisitedStones.java  UnvisitedStones.kt  UnvisitedStones.swift  main.c  unvisitedStones.js  unvisitedStones.ts  unvisited_stones.asm  unvisited_stones.cpp  unvisited_stones.go  unvisited_stones.php  unvisited_stones.py  unvisited_stones.rb  unvisited_stones.rs
unvisited_stones/unvisited_stones/: Program.cs  README.md
